5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1578_1332.log
== TEST (2019-03-20 18:23:29) 
-- CODE:
aresta =5
area =(3/2 (3)**0.5*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:18) 
-- CODE:
aresta =5
area =(3/2(3)**0.5*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:32) 
-- CODE:
aresta =5
area =(3/2(3)**0.5*5**2
 
print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:51) 
-- CODE:
aresta =5
area =(3/2(3)**0.5*5**2 
print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:19) 
-- CODE:
aresta =5
area =(3/2(3)**0.5*5**2 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:37) 
-- CODE:
aresta =5
area =(3/2(3)**0.5*5**2) 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2(3)**0.5*5**2) 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:29:13) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5*5**2) 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:31:01) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5*5**2) 
print(round(area, 4))
-- EXECUTION TIME:
0.1566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
